# tabless

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  ci.yml
docs/superpowers/plans/: 2026-05-27-launcher-service.html  2026-05-27-launcher-service.md  2026-05-27-protocol-handler.html  2026-05-27-protocol-handler.md  2026-05-27-url-validation.html  2026-05-27-url-validation.md  2026-05-28-storage-layer.html  2026-05-28-storage-layer.md  2026-05-28-ui-components-inbox.md
docs/superpowers/specs/: 2026-05-27-launcher-service-design.md  2026-05-27-protocol-handler-design.md  2026-05-27-url-validation-design.md  2026-05-28-storage-layer-design.md  2026-05-28-ui-components-inbox-design.md  2026-05-29-archive-view-delete-manual-entry-design.md
src/: lib.rs  main.rs  url.rs
src/launcher/: error.rs  identity.rs  info.rs  launcher.rs  linux.rs  macos.rs  mock.rs  mod.rs  platform.rs  registry.rs  windows.rs
src/protocol/: error.rs  ipc.rs  mod.rs  parse.rs  registration.rs  single_instance.rs
src/storage/: collection_repo.rs  connection.rs  error.rs  migrations.rs  mod.rs  search.rs  tag_repo.rs  url_repo.rs
src/storage/migrations/: 0001_init.sql
src/ui/: app.rs  inbox.rs  main_list.rs  mod.rs  url_row.rs
src/url/: error.rs  mod.rs  normalizer.rs  parser.rs
tests/: protocol_handler.rs  storage_integration_tests.rs  url_integration_tests.rs
