[package]
name = "tabless"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "5"
url = "2.5"
rusqlite = { version = "0.32", features = ["bundled"] }
sublime_fuzzy = "0.7"
which = "7.0"
interprocess = "2"
eframe = { version = "0.31", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }

[dev-dependencies]
