[package]
name = "tabless"
version = "0.1.0"
edition = "2024"
description = "Lightweight URL capture and launch utility"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/tabless"
license = "MIT OR Apache-2.0"

[dependencies]
dirs = "5"
url = "2.5"
rusqlite = { version = "0.32", features = ["bundled"] }
sublime_fuzzy = "0.7"
which = "7.0"
interprocess = "2"
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
winit = { version = "0.30", default-features = false, features = ["wayland-dlopen", "wayland-csd-adwaita"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
